--- a/TaskTrackerWebApi/TaskTrackerWebApi.csproj
+++ b/TaskTrackerWebApi/TaskTrackerWebApi.csproj
@@ -8,6 +8,11 @@
   <NoWarn>$(NoWarn);1591</NoWarn>
 </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Models\Project-was.cs" />
+    <Compile Remove="Models\Task-was.cs" />
+    <Compile Remove="Models\TaskTrackerContext-was.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
@@ -16,9 +21,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
